fixed title font size on small screens

--- a/source/CSS/project-style.css
+++ b/source/CSS/project-style.css
@@ -50,8 +50,6 @@ header {
     position: relative;
     justify-content: center;
     width: 100%;
-    transform: translateY(-230%);
-    
     color: white;
 }
 
@@ -314,14 +312,6 @@ header {
     #notepad, #markdown {
         font-size: 16px; /* Increase font size */
         padding: 20px 10px 20px 60px; /* Adjust padding */
-    }
-
-    .hamburger-menu {
-        display: flex;
-    }
-
-    .home-button, .logout-button{
-        display: none;
     }
 
     .note-type-buttons {
@@ -1149,6 +1139,7 @@ input[type="file"] {
         padding: 4px 8px;
         top: 10px;
         right: 10px;
+        display: inline;
     }
 
 
@@ -1253,6 +1244,12 @@ input[type="file"] {
 
     .navbar{
         position: relative;
+    }
+
+    .main-heading {
+        color: white;
+        font-family:Montserrat;
+        font-size: 22px;
     }
 
     .pen{
